Fix docs for auto build

--- a/docs/cert-manager.adoc
+++ b/docs/cert-manager.adoc
@@ -1,17 +1,17 @@
-== Adding cert-manager for HTTPS
+= Adding cert-manager for HTTPS
 
 This guide will help you integrate cert-manager to enable HTTPS for your
 Trento deployment using Let’s Encrypt certificates.
 
-=== Prerequisites
+== Prerequisites
 
 * Kubernetes cluster
 * Helm installed
 * Trento Helm chart
 
-=== Steps to Enable HTTPS
+== Steps to Enable HTTPS
 
-==== 1. Install cert-manager CRDs
+=== 1. Install cert-manager CRDs
 
 First, install the cert-manager Custom Resource Definitions (CRDs):
 [source,bash]
@@ -19,7 +19,7 @@ First, install the cert-manager Custom Resource Definitions (CRDs):
 kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.14.5/cert-manager.crds.yaml
 ....
 
-==== 2. Add jetstack repo
+=== 2. Add jetstack repo
 
 Add the Jetstack Helm repository and update your local Helm chart
 repository cache:
@@ -29,7 +29,7 @@ helm repo add jetstack https://charts.jetstack.io
 helm repo update
 ....
 
-==== 3. Install cert-manager
+=== 3. Install cert-manager
 
 Install cert-manager in the cert-manager namespace:
 [source,bash]
@@ -37,7 +37,7 @@ Install cert-manager in the cert-manager namespace:
 helm install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace --version v1.14.5
 ....
 
-==== 4. Generate a valid configuration for cert-manager
+=== 4. Generate a valid configuration for cert-manager
 
 Use `+envsubst+` to substitute the templates with actual valid data
 (make sure to replace the suggestions here with valid ones for your
@@ -50,7 +50,7 @@ envsubst < cluster-issuer.tpl.yaml > cluster-issuer.yaml
 envsubst < override-values.tpl.yaml > override-values.yaml
 ....
 
-==== 5. Apply cluster-issuer
+=== 5. Apply cluster-issuer
 
 Use `+envsubst+` to substitute the email for the domain certificate and
 apply it afterwards:
@@ -59,7 +59,7 @@ apply it afterwards:
 kubectl apply -f cluster-issuer.yaml
 ....
 
-==== 6. Apply certificate
+=== 6. Apply certificate
 
 Edit `+certificate.yaml+` to update the namespace and FQDN, and apply it
 afterwards:
@@ -68,7 +68,7 @@ afterwards:
 kubectl apply -f certificate.yaml
 ....
 
-==== 7. Deploy Trento with cert-manager support
+=== 7. Deploy Trento with cert-manager support
 
 Navigate to the Trento Helm chart directory and deploy it with
 cert-manager support enabled. Remember to change the admin password:
