--- a/docs/rabbitmq-tls.adoc
+++ b/docs/rabbitmq-tls.adoc
@@ -2,9 +2,7 @@
 
 Generates certificates for RabbitMQ TLS using the official generator
 tool. Certificates are meant to be used for development and QA. Please
-refer to the
-https://www.rabbitmq.com/docs/ssl#automated-certificate-generation-transcript[official
-documentation].
+refer to the link:https://www.rabbitmq.com/docs/ssl#automated-certificate-generation-transcript[official documentation].
 
 == Usage
 
