Prepare docs for auto build (#141)
* Prepare docs for auto build

* Add xref and ifndef

* Add links

--- a/docs/rabbitmq-tls.adoc
+++ b/docs/rabbitmq-tls.adoc
@@ -1,12 +1,10 @@
-== Generate TLS certificates for RabbitMQ
+= Generate TLS certificates for RabbitMQ
 
 Generates certificates for RabbitMQ TLS using the official generator
 tool. Certificates are meant to be used for development and QA. Please
-refer to the
-https://www.rabbitmq.com/docs/ssl#automated-certificate-generation-transcript[official
-documentation].
+refer to the link:https://www.rabbitmq.com/docs/ssl#automated-certificate-generation-transcript[official documentation].
 
-=== Usage
+== Usage
 
 [source,bash]
 ----
